# rsu_manager

./: LICENSE  package.xml  setup.cfg  setup.py
config/: rsu_2dof.rviz  rsu_debug.yaml  rsu_rt.yaml
launch/: debug.launch.py  hw_test.launch.py  solver_node.launch.py
robot_model/: rsu_for_prototype.urdf
robot_model/meshes/: ankle_1.stl  base_link.stl  dummy_crank_1.stl  dummy_foot_1.stl  left_TPU_pad_1.stl  point_c1_1.stl  point_c2_1.stl  point_u1_1.stl  point_u2_1.stl  upper_crank_1.stl
rsu_manager/node/: debug_solver_node.py  gamepad_rpy_node.py  hw_controll_test_node.py  rsu_link_plotter_node.py  rt_solver_node.py
rsu_manager/tests/: test_rsu_estimator_velocity_sweep.py
rsu_manager/util/: core.py  gamepad_reader.py  rsu_solver.py  rsu_state_estimator.py
