<?xml version="1.0"?>
<package format="3">
  <name>rsu_manager</name>
  <version>0.1.0</version>

  <description>
    RSU solver package (Python-based). Includes debug and realtime nodes.
  </description>

  <maintainer email="dldnjswns7412@gmail.com">lwj</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ===== Runtime dependencies ===== -->
  <exec_depend>rclpy</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>xacro</exec_depend>

  <!-- custom msg -->
  <exec_depend>roa_interfaces</exec_depend>

  <!-- python libs -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-evdev</exec_depend>

  <!-- lint -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>